# universal_interface

./: .gitignore  GEMINI.md  README.md  api.py  config.yaml  convert.py  convert_objects.py  convert_poses.py  main.py  pkl2json.py  pyproject.toml  read_pointcloud.py  sky_mask.bash  天空掩码生成.md
.trae/rules/: project_rules.md
core/: __init__.py  base.py  camera.py  dynamic_mask.py  ego_pose.py  factory.py  lidar.py  sky_mask.py  track.py
tests/: test_camera_tf.py
utils/: __init__.py  camera_discovery.py  config.py  data_io.py  geometry.py  logger.py  runtime_config.py  structures.py  timestamp.py
waymo/: waymo_pointcloud_extractor.py  waymo_tfrecord_to_standard.py  waymo到标准数据.md
